# ProjectEmerald

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Instructions.h  OperandStackData.cpp  OperandStackData.h  ProjectEmerald.sln  VirtualMachine.cpp  VirtualMachine.h  install.sh  main.cpp  premake5.lua
Runtime/: CMakeLists.txt  Runtime.vcxproj
Runtime/src/: VirtualMachine.h
Runtime/src/Emerald/: Compiler.cpp  Compiler.h  Core.h  DataUnit.cpp  DataUnit.h  Disassembler.cpp  Disassembler.h  Instructions.h  OperandStackData.cpp  OperandStackData.h  Utils.h  VirtualMachine.cpp  VirtualMachine.h  main.cpp
Runtime/src/Emerald/Lang/: Class.cpp  Class.h  Field.cpp  Field.h  Method.cpp  Method.h  Modifiers.h  Type.cpp  Type.h
Runtime/src/Emerald/Runtime/: Class.cpp  Class.h  EmInvoke.cpp  EmInvoke.h  LocalVarArray.cpp  LocalVarArray.h  LocalVariableStack.cpp  LocalVariableStack.h  OperandStack.h  OperandStackStack.cpp  OperandStackStack.h  PermGenAllocator.cpp  PermGenAllocator.h  Registers.cpp  Registers.h  StackFrame.cpp  StackFrame.h  Type.cpp  Type.h  VirtualMachine.cpp  VirtualMachine.h
scripts/: Win-GenProjects.ps1
src/: Instructions.h  OperandStackData.cpp  main.cpp
